feat: adjust config & new packages

--- a/package.json
+++ b/package.json
@@ -22,5 +22,9 @@
   },
   "engines": {
     "node": "^20.6.0 || >=22.0.0"
+  },
+  "dependencies": {
+    "mermaid": "^11.12.1",
+    "ogl": "^1.0.11"
   }
 }
